# my-secretary

./: .gitignore  CLAUDE.md  Makefile  README.md  brainstorming.md  datatist_all_stuff.csv  pyproject.toml
.claude/skills/my-secretary/: SKILL.md  profile_lookup.sh
.claude/skills/my-secretary/scripts/: init_db.sh  maintain_db.sh
data/: my-secretary.db
docs/: models.md
hooks/: post-commit  post-merge  pre-commit
src/my_secretary/: __init__.py  cli.py  db.py  models.py
src/my_secretary/commands/: contact.py  event.py  profile.py
tests/: test_core.py
